--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -2,6 +2,7 @@
 
 {% block content %}
       {% include 'search.htm' %}
+      {% load tags %}
       <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
             <th>类型</th>
@@ -39,7 +40,7 @@
           <tr>
             <td align="center">备注</td>
             <td colspan="5">{{ i.orderlogistics.note }}</td>
-            {% include 'operate.htm' %}
+            {% optr i %}
           </tr>
 {% endfor %}
           {% include 'page.htm' %}
