--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -25,11 +25,11 @@
 .pinStream{width:764px;float:left;overflow:hidden;_zoom:1;}
 .pinStream a{display:block;height:100%}
 .pinStream .box{overflow:hidden;*zoom:1}
-.pinStream .b1,.b2,.b3{margin:0 3px 3px 0;float:left;overflow:hidden;position:relative;}
-.pinStream .b1{width:188px;height:188px}
-.pinStream .b2{width:379px;height:188px}
-.pinStream .b3{width:379px;height:379px}
-.pinStream .b2 img{margin-top:-106px}
+.pinStream .s188,.s379,.s379379{margin:0 3px 3px 0;float:left;overflow:hidden;position:relative;}
+.pinStream .s188{width:188px;height:188px}
+.pinStream .s379{width:379px;height:188px}
+.pinStream .s379379{width:379px;height:379px}
+/*.pinStream .s379 img{margin-top:-106px}*/
 .pinStream .boxInner{float:left;width:382px;height:570px}
 .floatInfo{color:#FFFFFF;position:relative;display:block;width:100%;position:absolute;left:0;bottom:-50px;height:50px;background:#000000;opacity:0.8;filter:alpha(opacity=80);-moz-opacity:0.8;}
 .floatInfo .price{position:absolute;left:8px;bottom:20px;font-size:20px;-webkit-text-size-adjust:none;}
