--- a/account/templates/myorder.htm
+++ b/account/templates/myorder.htm
@@ -7,31 +7,19 @@
                 <tr align="center">
                     <th>订单号</th>
                     <th>下单时间</th>
-                    <th>订单总金额</th>
+                    <th>金额</th>
                     <th>订单状态</th>
                     <th>操作</th>
                 </tr>
+{% for i in orders %}
                 <tr align="center">
-                    <td><a href="/account/order/2012531488472">2012531488472</a></td>
-                    <td>2013-02-16 10:52:16</td>
-                    <td>￥3.00 元 和 0 K金</td>
-                    <td><font color="red">取消</font>,未付款,未发货</td>
-                    <td><a href="/account/order/2012531488472">查看详情</a></td>
+                    <td><a href="/account/order/?{{ i.sn }}">{{ i.sn }}</a></td>
+                    <td>{{ i.orderlog_set.all.0.time|date:'Y-m-d H:i:s' }}</td>
+                    <td>{% for ii, vv in i.total.items %}{% if forloop.first %}{{ vv }}{% else %} | {{ vv }}{% endif %}{% endfor %}</td>
+                    <td>{{ i.orderstatus.get_status_display }} | {{ i.ordership.get_status_display }} | {{ i.orderpay.get_status_display }}</td>
+                    <td><a href="/account/order/?{{ i.sn }}">查看详情</a></td>
                 </tr>
-                <tr align="center">
-                    <td><a href="/account/order/2012531488472">2012531488472</a></td>
-                    <td>2013-02-16 10:52:16</td>
-                    <td>￥3.00 元 和 0 K金</td>
-                    <td><font color="red">取消</font>,未付款,未发货</td>
-                    <td><a href="/account/order/2012531488472">查看详情</a></td>
-                </tr>
-                <tr align="center">
-                    <td><a href="/account/order/2012500282807">2012500282807</a></td>
-                    <td>2013-02-16 10:52:16</td>
-                    <td>￥284.00 元 和 0 K金</td>
-                    <td><font color="red">订单停止</font>,未付款,未发货</td>
-                    <td><a href="/account/order/2012500282807">查看详情</a></td>
-                </tr>
+{% endfor %}
             </table>
         </div>
 {% endblock %}
