--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -54,70 +54,10 @@
           </div>
         </div>
         <div class="buyList">
-            <h4>最近购买过的人</h4>
-            <ul>
-                <li><a href="/tag/evanescence/"><img width="32" height="32" src="{{ STATIC_URL }}images/s_50.png" alt="再见北方" title="再见北方" /></a></li>
-                <li>
-                    <a href="/tag/17352869/"><img width="32" height="32" src="{{ STATIC_URL }}images/s_50.png" alt="蛮老碗" title="蛮老碗" /></a>
-                </li>
-                <li>
-                    <a href="/tag/zhangyaoxi/"><img width="32" height="32" src="{{ STATIC_URL }}images/s_50.png" alt="张耀兮" title="张耀兮" /></a>
-                </li>
-                <li>
-                    <a href="/tag/google/"><img width="32" height="32" src="{{ MEDIA_URL }}images/65d14999dd9441f48f5a31cc91ae2023_s_50.jpg" alt="心干情怨" title="心干情怨" /></a>
-                </li>
-                <li>
-                    <a href="/tag/20863238/"><img width="32" height="32" src="{{ STATIC_URL }}images/s_50.png" alt="英俊中年" title="英俊中年" /></a>
-                </li>
-                <li>
-                    <a href="/tag/kkkkkkkkkk/"><img width="32" height="32" src="{{ MEDIA_URL }}images/bae1c4be7f314052ba44c958fadf27d3_s_50.jpg" alt="句号姑娘" title="句号姑娘" /></a>
-                </li>
-                <li>
-                    <a href="/tag/20791081/"><img width="32" height="32" src="{{ STATIC_URL }}images/s_50.png" alt="江国藩" title="江国藩" /></a>
-                </li>
-                <li>
-                    <a href="/tag/ers45678911"><img width="32" height="32" src="{{ MEDIA_URL }}images/e46802f9826f4c45bca3d1a0eceeb11e_s_50.jpg" alt="提亚碧玺工厂那些美丽石头" title="提亚碧玺工厂那些美丽石头" /></a>
-                </li>
-                <li>
-                    <a href="/tag/yonglovelin/"><img width="32" height="32" src="{{ MEDIA_URL }}images/894c969f2703451899e7874a86864ee3_s_50.jpg" alt="小绿女孩" title="小绿女孩" /></a>
-                </li>
-                <li>
-                    <a href="/tag/Joseph/"><img width="32" height="32" src="{{ MEDIA_URL }}images/ebaa41a38e5c48afb5b1c297ecc1fa8d_s_50.jpg" alt="joseph" title="joseph" /></a>
-                </li>
-            </ul>
-        </div>
-        <!-- <div class="buyList">
             <h4>热销</h4>
             <ul>
-                <li><a href="/tag/evanescence/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133015s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a></li>
-                <li>
-                    <a href="/tag/17352869/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133017s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/zhangyaoxi/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133018s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/google/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133018s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/20863238/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133005s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/kkkkkkkkkk/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133006s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/20791081/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133004s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/ers45678911"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133010s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/yonglovelin/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133011s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-                <li>
-                    <a href="/tag/Joseph/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133004s.jpg" alt="香浓巧克力" title="香浓巧克力" /></a>
-                </li>
-            </ul> -->
+                <li><a href="/tag/evanescence/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133001b1a.jpg" alt="香浓巧克力" title="香浓巧克力" /></a></li>
+                <li><a href="/tag/evanescence/"><img width="32" height="32" src="{{ MEDIA_URL }}images/3133001b1b.jpg" alt="香浓巧克力" title="香浓巧克力" /></a></li>
         </div>
     </div>
 {% endblock %}
