--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -1587,6 +1587,7 @@ header,footer,article,aside,section,nav,menu,hgroup {
 	background-color: #FFFFFF;
 	border: 1px solid #d9d9d9;
 	padding: 35px;
+	margin: 0 0 30px 0;
 }
 
 .pWhite h3 {
