优化 物品模型 , 订单模型
/order/2/ 'Order' object has no attribute 'get' 报错. 待修正



Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/bom/templates/produceui.htm
+++ b/bom/templates/produceui.htm
@@ -5,7 +5,7 @@
           <form action="/order/" method="get">
             <select name="c">
               <option value="-1" selected>全部</option>
-{% for v,i in oStatus %}
+{% for v,i in chcs %}
               <option value="{{ v }}" >{{ i }}</option>
 {% endfor %}
             </select>
