--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -25,10 +25,10 @@
           <tr align="center">
             <td align="right" nowrap="true">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
-            <td>{{ item.number }}</td>
-            <td>{{ item.amount }}</td>
+            <td>{{ item.num }}</td>
+            <td>{{ item.fee }}</td>
             <td>{{ item.get_dis_display }}</td>
-            <td>{{ item.nowFee }}</td>
+            <td>{{ item.nfee }}</td>
           </tr>
 {% endfor %}
           <tr>
