--- a/item/templates/itemadd.htm
+++ b/item/templates/itemadd.htm
@@ -32,13 +32,13 @@
              
          </div>
      
-         <div class="form-row field-onLine">
+         <div class="form-row field-onl">
              
              
                  <div>
                      
                      
-                         <input type="checkbox" name="onLine" id="id_onLine" /><label for="id_onLine" class="vCheckboxLabel">上架</label>
+                         <input type="checkbox" name="onl" id="id_onl" /><label for="id_onl" class="vCheckboxLabel">上架</label>
                      
                      
                  </div>
