--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -16,7 +16,7 @@
 {% for i in oList %}
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
-            <td><a href="{{ request.path }}{{ i.sn }}/">{{ i.sn }}</a></td>
+            <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
             <td>{{ i.orderlogistics.consignee }}</td>
             <td>{{ i.orderlogistics.tel }}</td>
@@ -27,10 +27,10 @@
           <tr align="center">
             <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
-            <td>{{ item.number }}</td>
-            <td>{{ item.amount }}</td>
+            <td>{{ item.num }}</td>
+            <td>{{ item.fee }}</td>
             <td>{{ item.get_dis_display }}</td>
-            <td>{{ item.nowFee }}</td>
+            <td>{{ item.nfee }}</td>
           </tr>
 {% endfor %}
           <tr>
