--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -28,7 +28,7 @@
             <a href="/tag/{{ i.name }}/" target="_blank/" title="{{ i.name }}">
                 <img src="{{ i.src }}" alt="{{ i.name }}" title="{{ i.name }}" />
                 <span class="floatInfo">
-                    <span class="price">{{ i.amount }}</span>
+                    <span class="price">{{ i.fee }}</span>
                     <span class="like_icon">{{ i.like }}</span>
                     <span class="name">{{ i.name }}</span>
                 </span>
