--- a/spec/templates/specadmin.htm
+++ b/spec/templates/specadmin.htm
@@ -22,7 +22,7 @@
               <tr class="odd">
                 <td align="center">{{ i.id }}</td>
                 <td><a href="/spec/{{ i.id }}/" title="编辑">{{ i.value }}</a></td>
-                <td align="center" class="onLine cp"><img src="/images/{% if i.onLine %}yes{% else %}no{% endif %}.gif" /></td>
+                <td align="center" class="onl cp"><img src="/images/{% if i.onl %}yes{% else %}no{% endif %}.gif" /></td>
               </tr>
 {% endfor %}
             </tbody>
