--- a/item/templates/itemadmin.htm
+++ b/item/templates/itemadmin.htm
@@ -25,7 +25,7 @@
                 <td class="cp">{{ i.id }}</td>
                 <td><a href="/item/edit/{{ i.id }}/" title="编辑" class="editItem">{{ i.itemName }}</a></td>
                 <td>{{ i.sn }}</td>
-                <td class="onLine cp"><img src="{{ STATIC_URL }}images/{% if i.onLine %}yes{% else %}no{% endif %}.gif" /></td>
+                <td class="onl cp"><img src="{{ STATIC_URL }}images/{% if i.onl %}yes{% else %}no{% endif %}.gif" /></td>
                 <td class="show cp"><img src="{{ STATIC_URL }}images/{% if i.show %}yes{% else %}no{% endif %}.gif" /></td>
               </tr>
 {% endfor %}
