--- a/produce/templates/produceui.htm
+++ b/produce/templates/produceui.htm
@@ -25,7 +25,7 @@
           <tr align="center">
             <td align="right" nowrap="true">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
-            <td>{{ item.number }}</td>
+            <td>{{ item.num }}</td>
             <td>{{ item.produce.get_status_display }}</td>
             {% optr item %}
           </tr>
