--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -16,12 +16,12 @@
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
-            <td>{{ i.orderlogistics.consignee }} [ {{ i.orderlogistics.tel }} ]</td>
-            <td>200.00 | 11.00 | 189.00 | {{ i.orderpay.name }}</td>
-            <td>{{ i.orderstatus.get_status_display }} | {{ i.orderpay.get_status_display }} | {{ i.ordership.get_status_display }}</td>
+            <td>{{ i.ordlogcs.consignee }} [ {{ i.ordlogcs.tel }} ]</td>
+            <td>200.00 | 11.00 | 189.00 | {{ i.ordpay.name }}</td>
+            <td>{{ i.ordstatus.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
             {% optr i %}
           </tr>
-{% for item in i.orderitem_set.all %}
+{% for item in i.orditem_set.all %}
           <tr align="center">
             <td align="right" nowrap="true">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
@@ -33,15 +33,15 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
+            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.ordlogcs.address }}" target="_blank">{{ i.ordlogcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
-            <td align="left">{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
+            <td align="left">{{ i.ordlogcs.signDate|date:"Y-m-d" }} | {{ i.ordlogcs.signTimeStart|time:"H:i" }} - {{ i.ordlogcs.signTimeEnd|time:"H:i" }}</td>
             <td>预发货</td>
-            <td>{{ i.orderlogistics.logisTimeStart|time:"H:i" }}</td>
-            <td>{{ i.orderlogistics.get_advance_display }}</td>
-            <td>{{ i.orderlogistics.dman.first_name }}{{ i.orderlogistics.dman.last_name }}</td>
+            <td>{{ i.ordlogcs.logisTimeStart|time:"H:i" }}</td>
+            <td>{{ i.ordlogcs.get_advance_display }}</td>
+            <td>{{ i.ordlogcs.dman.first_name }}{{ i.ordlogcs.dman.last_name }}</td>
           </tr>             
           <tr>
             <td align="center">备注</td>
