--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -16,9 +16,9 @@
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
-            <td>{{ i.orderlogistics.consignee }} [ {{ i.orderlogistics.tel }} ]</td>
-            <td>200.00 | 11.00 | 189.00 | {{ i.orderpay.name }}</td>
-            <td>{{ i.orderstatus.get_status_display }} | {{ i.orderpay.get_status_display }} | {{ i.ordership.get_status_display }}</td>
+            <td>{{ i.ordlogcs.consignee }} [ {{ i.ordlogcs.tel }} ]</td>
+            <td>200.00 | 11.00 | 189.00 | {{ i.ordpay.name }}</td>
+            <td>{{ i.ordstatus.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
             {% optr i %}
           </tr>
 {% for item in i.items %}
@@ -32,13 +32,13 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.orderlogistics.address }}" target="_blank">{{ i.orderlogistics.address }}</a></td>
+            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.ordlogcs.address }}" target="_blank">{{ i.ordlogcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
-            <td align="left">{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
+            <td align="left">{{ i.ordlogcs.signDate|date:"Y-m-d" }} | {{ i.ordlogcs.signTimeStart|time:"H:i" }} - {{ i.ordlogcs.signTimeEnd|time:"H:i" }}</td>
             <td>预发货</td>
-            <td>{{ i.orderlogistics.logisTimeStart|time:"H:i" }}</td>
+            <td>{{ i.ordlogcs.logisTimeStart|time:"H:i" }}</td>
             <td>{{ i.form.advance }}</td>
             <td>{{ i.form.dman }}</td>
           </tr>
