--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -17,13 +17,13 @@
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
-            <td>{{ i.orderlogistics.signDate|date:"Y-m-d" }} | {{ i.orderlogistics.signTimeStart|time:"H:i" }} - {{ i.orderlogistics.signTimeEnd|time:"H:i" }}</td>
-            <td>{{ i.orderlogistics.consignee }}</td>
-            <td>{{ i.orderlogistics.tel }} | {{ i.user.username}}</td>
-            <td>{{ i.orderpay.name }}</td>
-            <td>{{ i.orderstatus.get_status_display }} | {{ i.orderpay.get_status_display }} | {{ i.ordership.get_status_display }}</td>
+            <td>{{ i.ordlogcs.signDate|date:"Y-m-d" }} | {{ i.ordlogcs.signTimeStart|time:"H:i" }} - {{ i.ordlogcs.signTimeEnd|time:"H:i" }}</td>
+            <td>{{ i.ordlogcs.consignee }}</td>
+            <td>{{ i.ordlogcs.tel }} | {{ i.user.username}}</td>
+            <td>{{ i.ordpay.name }}</td>
+            <td>{{ i.ordstatus.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
           </tr>
-{% for item in i.orderitem_set.all %}
+{% for item in i.orditem_set.all %}
           <tr align="center">
             <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
@@ -35,11 +35,11 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="8"><a href="{{ request.paths.地图 }}?k={{ i.orderlogistics.address }}" target="_blank">[ {{ i.orderlogistics.area }} ] {{ i.orderlogistics.address }}</a></td>
+            <td colspan="8"><a href="{{ request.paths.地图 }}?k={{ i.ordlogcs.address }}" target="_blank">[ {{ i.ordlogcs.area }} ] {{ i.ordlogcs.address }}</a></td>
           </tr>          
           <tr>
             <td align="center">备注</td>
-            <td colspan="5">{{ i.orderlogistics.note }}</td>
+            <td colspan="5">{{ i.ordlogcs.note }}</td>
             {% optr i %}
           </tr>
 {% endfor %}
