--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -77,7 +77,7 @@
                 </tr>
                 <tr>
                     <td>最佳收货时间：</td>
-                    <td>{{ request.session.c.signDate }}&nbsp;&nbsp;{{ time.start|time:"H:i" }} - {{ time.end|time:"H:i" }}</td>
+                    <td>{{ request.session.c.date }}&nbsp;&nbsp;{{ time.start|time:"H:i" }} - {{ time.end|time:"H:i" }}</td>
                 </tr>
                 <tr>
                     <td>备注：</td>
