--- a/consignee/templates/consignee.htm
+++ b/consignee/templates/consignee.htm
@@ -38,8 +38,8 @@
                             <td>{{ form.tel }}</td>
                         </tr>
                         <tr>
-                            <td align="right">{{ form.signDate.label }}：</td>
-                            <td>{{ form.signDate }}</td>
+                            <td align="right">{{ form.date.label }}：</td>
+                            <td>{{ form.date }}</td>
                         </tr>
                     <tr>
                         <td align="right">{{ form.time.label }}：</td>
