--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -86,7 +86,7 @@
                 </tr>
                 <tr>
                     <td align="right">最佳收货日期：</td>
-                    <td>{{ form.signDate }}</td>
+                    <td>{{ form.date }}</td>
                 </tr>
             <tr>
                 <td align="right">最佳收货时间：</td>
