--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -18,7 +18,7 @@
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.ordlogcs.consignee }} [ {{ i.ordlogcs.tel }} ]</td>
             <td>200.00 | 11.00 | 189.00 | {{ i.ordpay.name }}</td>
-            <td>{{ i.ordstatus.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
+            <td>{{ i.ordsats.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
             {% optr i %}
           </tr>
 {% for item in i.items %}
