--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -21,7 +21,7 @@
             <td>{{ i.ordlogcs.consignee }}</td>
             <td>{{ i.ordlogcs.tel }} | {{ i.user.username}}</td>
             <td>{{ i.ordpay.name }}</td>
-            <td>{{ i.ordstatus.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
+            <td>{{ i.ordsats.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
           </tr>
 {% for item in i.orditem_set.all %}
           <tr align="center">
