修正一些奇怪的问题.类似于函数名重定义。
物流功能待完成功能: 物流状态更变、 ajax更改信息再可须条件下是否可执行。

--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -39,8 +39,8 @@
             <td align="left">{{ i.ordlogcs.date|date:"Y-m-d" }} | {{ i.ordlogcs.stime|time:"H:i" }} - {{ i.ordlogcs.etime|time:"H:i" }}</td>
             <td>预发货</td>
             <td>{{ i.ordlogcs.lstime|time:"H:i" }}</td>
-            <td>{% if i.form %}{{ i.form.advance }}{% else %}{{ i.get_advance_display }}{% endif %}</td>
-            <td>{% if i.form %}{{ i.form.dman }}{% else %}{{ i.dman }}{% endif %}</td>
+            <td>{% if i.form %}{{ i.form.advance }}{% else %}{{ i.ordlogcs.get_advance_display }}{% endif %}</td>
+            <td>{% if i.form %}{{ i.form.dman }}{% else %}{{ i.ordlogcs.dman }}{% endif %}</td>
           </tr>
           <tr>
             <td align="center">备注</td>
