初步完成物流状态操作
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-        <form action="/order/submit/" method="POST" id="checkout">
+        <form action="{{ requset.paths.提交订单 }}" method="POST" id="checkout">
           <h3>商品列表</h3>
           <table width="100%" cellpadding="3" cellspacing="1" class="sortTable">
             <thead>
