--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -20,7 +20,7 @@
             <td>{{ i.ordlogcs.date|date:"Y-m-d" }} | {{ i.ordlogcs.stime|time:"H:i" }} - {{ i.ordlogcs.etime|time:"H:i" }}</td>
             <td>{{ i.ordlogcs.consignee }}</td>
             <td>{{ i.ordlogcs.tel }} | {{ i.user.username}}</td>
-            <td>{{ i.ordpay.name }}</td>
+            <td>{{ i.ordpay.cod.get_cod_display }}</td>
             <td>{{ i.ordsats.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
           </tr>
 {% for item in i.orditem_set.all %}
