--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -17,11 +17,11 @@
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
-            <td>{{ i.ordlogcs.date|date:"Y-m-d" }} | {{ i.ordlogcs.stime|time:"H:i" }} - {{ i.ordlogcs.etime|time:"H:i" }}</td>
-            <td>{{ i.ordlogcs.consignee }}</td>
-            <td>{{ i.ordlogcs.tel }} | {{ i.user.username}}</td>
-            <td>{{ i.ordpay.cod.get_cod_display }}</td>
-            <td>{{ i.ordsats.get_status_display }} | {{ i.ordpay.get_status_display }} | {{ i.ordship.get_status_display }}</td>
+            <td>{{ i.logcs.date|date:"Y-m-d" }} | {{ i.logcs.stime|time:"H:i" }} - {{ i.logcs.etime|time:"H:i" }}</td>
+            <td>{{ i.logcs.consignee }}</td>
+            <td>{{ i.logcs.tel }} | {{ i.user.username}}</td>
+            <td>{{ i.ordfnc.cod.get_cod_display }}</td>
+            <td>{{ i.ordsats.get_status_display }} | {{ i.ordfnc.get_status_display }} | {{ i.ordship.get_status_display }}</td>
           </tr>
 {% for item in i.orditem_set.all %}
           <tr align="center">
@@ -35,11 +35,11 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="8"><a href="{{ request.paths.地图 }}?k={{ i.ordlogcs.address }}" target="_blank">[ {{ i.ordlogcs.area }} ] {{ i.ordlogcs.address }}</a></td>
+            <td colspan="8"><a href="{{ request.paths.地图 }}?k={{ i.logcs.address }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
           </tr>          
           <tr>
             <td align="center">备注</td>
-            <td colspan="5">{{ i.ordlogcs.note }}</td>
+            <td colspan="5">{{ i.logcs.note }}</td>
             {% optr i %}
           </tr>
 {% endfor %}
